[package]
name = "virtualcan"
version = "0.1.0"
authors = ["Windel Bouwman <windel@windel.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.5"
clap = "2.33"
log = "0.4.8"
simple_logger = "1.3.0"
tokio = { version = "0.2", features = ["tcp", "rt-core", "stream"] }
tokio-util = { version = "0.3", features = ["codec"] }
futures = "0.3"
