[package]
name = "bridge"
version = "0.1.0"
authors = ["Windel Bouwman <windel@windel.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

bytes = "0.5"
clap = "2"
log = "0.4"
simple_logger = "1.3"
scroll = "0.10"

[target.'cfg(target_os = "linux")'.dependencies]
socketcan = "1.7"

