[package]
name = "virtualcan"
version = "0.1.0"
authors = ["Windel Bouwman <windel@windel.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
clap = "3"
log = "0.4"
simple_logger = "1"
tokio = { version = "1", features = ["net", "rt"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
